# manim-stock-visualization

./: .gitignore  .pdmignore  README.md  download.py  main.py  plot.py  pyproject.toml  requirements.txt  stock_data.csv  stock_visualization.py
.github/workflows/: check-format.yaml  publish-testpypi.yaml  run-unittests.yaml
docs/data/: stock_data.csv
examples/data/: stock_data.csv
examples/scripts/: download.py
manim_stock/util/: __init__.py  axes.py  barchart.py  const.py  dot.py  finance.py  tex.py  title.py
manim_stock/visualization/: __init__.py  barplot.py  growing_barplot.py  growing_lineplot.py  lineplot.py  single_stock_price.py  stock.py  stock_visualization.py
tests/util/: test_finance.py
tests/visualization/: test_barplot.py  test_growing_barplot.py  test_growing_lineplot.py  test_lineplot.py
