[project]
name = "manim-stock-visualization"
version = "0.0.2"
description = "Visualization of stock prices using manimCE!"
authors = [
    { name = "Dennis Jabs" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "manim>=0.19.0",
    "yfinance>=0.2.52",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "black>=23.7.0",
    "flake8>=7.3.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.1",
]

[project.urls]
Homepage = "https://github.com/nobodyPerfecZ/manim-stock-visualization"
Issues = "https://github.com/nobodyPerfecZ/manim-stock-visualization/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
